src/main/java/com/example/gamja/validater/UserValidator.java
package com.example.gamja.validater;

import com.example.gamja.error.exception.DuplicateEmailException;
import com.example.gamja.repository.user.UserRepository;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;

@Component
public class UserValidator {
    private final UserRepository userRepository;

    @Autowired
    public UserValidator(UserRepository userRepository) {
        this.userRepository = userRepository;
    }

    public void UserValidateDuplicateId(String email) throws DuplicateEmailException {
        if (userRepository.existsByEmail(email)) {
            throw new DuplicateEmailException(email);
        }
    }
}
